--- a/app/src/main/res/drawable/membtnshape.xml
+++ b/app/src/main/res/drawable/membtnshape.xml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="10dp"
-        />
-    <solid
-        android:color="@color/memoryButtonColour"
-        />
-    <stroke
-        android:width="8dp"
-        android:color="@color/generalBackgroudColour"
-        />
-</shape>
+
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:state_pressed="true">
+    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+        <corners android:radius="10dp" />
+        <solid
+            android:color="@color/onPressM" />
+        <stroke
+            android:width="6dp"
+            android:color="@color/onPressBackground" />
+    </shape>
+</item>
+<item android:state_selected="true">
+
+    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+        <corners
+            android:radius="10dp" />
+        <solid
+            android:color="@color/memoryButtonColour" />
+        <stroke
+            android:width="8dp"
+            android:color="@color/generalBackgroudColour" />
+    </shape>
+</item>
+
+<item>
+    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+        <corners
+            android:radius="10dp" />
+        <solid
+            android:color="@color/memoryButtonColour" />
+        <stroke
+            android:width="8dp"
+            android:color="@color/generalBackgroudColour" />
+    </shape>
+</item>
+</selector>
