--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:id="@+id/history"
         android:layout_weight="1"
         android:hint="@string/historyHint"
+        android:textColorHint="@color/hintColour"
         android:gravity="center_horizontal|end"
         android:textColor="@color/generalTextColour"
         android:background="@drawable/inputshape"/>
@@ -29,6 +30,7 @@
         android:gravity="end"
         android:textSize="40sp"
         android:hint="@string/mainTextHint"
+        android:textColorHint="@color/hintColour"
         android:textColor="@color/generalTextColour"
         android:background="@drawable/inputshape"/>
 
@@ -49,6 +51,7 @@
             android:id="@+id/btnClear"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/clrbtnshape"/>
 
         <Button
@@ -107,6 +110,7 @@
             android:id="@+id/btnDelete"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
         <Button
@@ -116,6 +120,7 @@
             android:id="@+id/btnDivRem"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
         <Button
@@ -125,6 +130,7 @@
             android:id="@+id/btnDivide"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
         <Button
@@ -134,6 +140,7 @@
             android:id="@+id/btnMultiply"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
     </LinearLayout>
@@ -154,6 +161,7 @@
             android:id="@+id/btn7"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -163,6 +171,7 @@
             android:id="@+id/btn8"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -172,6 +181,7 @@
             android:id="@+id/btn9"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -182,6 +192,7 @@
             android:layout_weight="1"
             android:textSize="25sp"
             android:padding="5dp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
     </LinearLayout>
@@ -202,6 +213,7 @@
             android:id="@+id/btn4"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -211,6 +223,7 @@
             android:id="@+id/btn5"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -220,6 +233,7 @@
             android:id="@+id/btn6"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -229,6 +243,7 @@
             android:id="@+id/btnPlus"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
     </LinearLayout>
@@ -240,6 +255,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
         android:weightSum="4"
+        android:textColor="@color/generalTextColour"
         android:background="@color/generalBackgroudColour">
 
         <Button
@@ -249,6 +265,7 @@
             android:id="@+id/btn1"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -258,6 +275,7 @@
             android:id="@+id/btn2"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -267,6 +285,7 @@
             android:id="@+id/btn3"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -276,6 +295,7 @@
             android:id="@+id/btnPlusMinus"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
     </LinearLayout>
@@ -296,6 +316,7 @@
             android:id="@+id/btn0"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -305,6 +326,7 @@
             android:id="@+id/btnDecimal"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -314,6 +336,7 @@
             android:id="@+id/btn00"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/btnshape"/>
 
         <Button
@@ -323,6 +346,7 @@
             android:id="@+id/btnEquals"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
 
     </LinearLayout>
