--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cryptonym0.calculateme.MainActivity"
     android:orientation="vertical"
-    android:background="@color/generalBackgroudColour">
+    android:background="@color/generalBackgroudColour"
+    android:screenOrientation="portrait">
 
     <TextView
         android:layout_width="match_parent"
