--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,9 +116,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/divr"
-            android:id="@+id/btnDivRem"
-            android:layout_weight="1"
+            android:text="^"
+            android:id="@+id/btnSqur"
             android:textSize="25sp"
             android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
@@ -126,12 +125,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/div"
             android:id="@+id/btnDivide"
             android:layout_weight="1"
             android:textSize="25sp"
             android:textColor="@color/generalTextColour"
-            android:background="@drawable/operatorbtnshape"/>
+            android:background="@drawable/operatorbtnshape"
+            android:text="\u00F7" />
 
         <Button
             android:layout_width="wrap_content"
