--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,8 +116,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="^"
+            android:text="@string/squr"
             android:id="@+id/btnSqur"
+            android:layout_weight="1"
             android:textSize="25sp"
             android:textColor="@color/generalTextColour"
             android:background="@drawable/operatorbtnshape"/>
